--- a/src/BandCenter.Uno/BandCenter.Uno.Shared/MainPage.xaml
+++ b/src/BandCenter.Uno/BandCenter.Uno.Shared/MainPage.xaml
@@ -1,5 +1,4 @@
 ﻿<Page
-    x:Class="BandCenter.Uno.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:BandCenter.Uno"
@@ -7,8 +6,16 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:controls="using:BandCenter.Uno.Controls"
     xmlns:VM="clr-namespace:BandCenter.Uno.ViewModels"
+    xmlns:Custom="using:BandCenter.Uno.Converters"
+    x:Class="BandCenter.Uno.MainPage"
     mc:Ignorable="d"
-    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    >
+    <Page.Resources>
+        <Custom:HeartRateValueConverter x:Key="HeartRateValueConverter"/>
+    </Page.Resources>
+    <Page.Background>
+        <ThemeResource ResourceKey="ApplicationPageBackgroundThemeBrush"/>
+    </Page.Background>
     <ScrollViewer>
         <StackPanel Spacing="2">
             <controls:ActivityTile x:Name="StepsTile" Subtitle="Steps"
@@ -18,7 +25,7 @@
                 </controls:ActivityTile.Icon>
             </controls:ActivityTile>
             <controls:ActivityTile x:Name="HeartRateTile" Subtitle="Heart rate"
-                                   MetricMarkup="{Binding HeartRate}">
+                                   MetricMarkup="{Binding HeartRate, Converter={StaticResource HeartRateValueConverter}}">
                 <controls:ActivityTile.Icon>
                     <FontIconSource Glyph="&#xE006;" FontSize="32" FontFamily="{ThemeResource KSymbolFontFamily}"/>
                 </controls:ActivityTile.Icon>
